--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-libre (5.15.3) unstable; urgency=medium
+
+  * update
+
+ -- Ali Rıza KESKIN <parduscix@yandex.ru>  Mon, 14 Jun 2021 03:11:19 +0300
+
 linux-libre (5.15.0) unstable; urgency=medium
 
   * update
